cli/tests/snapshot/inputs/errors/destructuring_repeated_ident.ncl
# capture = 'stderr'
# command = ['eval']
let f = fun { duped, duped, .. } => duped
in f { duped = 1, other = "x" }
